--- a/106/index.html
+++ b/106/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,7 +58,7 @@
                 </div>
                 <!--Button to save in btn-dark-->
                 <div class="field button-container">
-                    <button id="btn btn-dark">Save</button>
+                    <button id = "btnSave" class="btn btn-dark">Save</button>
                 </div>
         </section>
         </div>
